--- a/index.html
+++ b/index.html
@@ -18,6 +18,47 @@
         </div>
     </div>
     <section class="hero-section">
+        <div class="hero-wrapper">
+            <div class="hero-text">
+                <h1>This website is awesome</h1>
+                <p class="subh1">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button class="main-cta">Sign up</button>
+            </div>
+            <div class="placeholder"><p>this is a place holder for an image</p></div>
+        </div>
+    </section>
+    <section class="second-section">
+        <h2 class="second-heading">Some random information.</h2>
+        <div class="card-wrapper">
+            <div class="card">
+                <div class="border"></div>
+                <p class="card-text">this is some subtext under an illustration of image</p>
+            </div>
+
+            <div class="card">
+                <div class="border"></div>
+                <p class="card-text">this is some subtext under an illustration of image</p>
+            </div>
+            <div class="card">
+                <div class="border"></div>
+                <p class="card-text">this is some subtext under an illustration of image</p>
+            </div>
+            <div class="card">
+                <div class="border"></div>
+                <p class="card-text">this is some subtext under an illustration of image</p>
+            </div>
+            
+            
+        </div>
+    </section>
+
+    <section class="third-section">
+        <p class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice. 
+        </p>
+        <div class="signature">
+            <p>-Thor, God Of Thunder</p>
+        </div>
     </section>
 </body>
 </html>
