cta section done

--- a/index.html
+++ b/index.html
@@ -60,5 +60,14 @@
             <p>-Thor, God Of Thunder</p>
         </div>
     </section>
+    <section class="fourth-section">
+        <div class="blue-div">
+            <div class="blue-div-text">
+                <p class="bdiv-header">Call to action! It's time!</p>
+                <p class="bdiv-subtext">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="bdiv-cta">Sign up</button>
+        </div>
+    </section>
 </body>
 </html>
