--- a/index.html
+++ b/index.html
@@ -69,5 +69,8 @@
             <button class="bdiv-cta">Sign up</button>
         </div>
     </section>
+    <footer>
+        <p>Copyright &copy The Odin Project 2024</p>
+    </footer>
 </body>
 </html>
